<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calls Meter</string>
    <string name="track_voice_calls">Track outgoing voice calls</string>
    <string name="reset_meter">Reset meter</string>
    <string name="name">Name</string>
    <string name="duration">Duration</string>
    <string name="number">Number</string>
    <string name="minute">minute(s)</string>
    <string name="add_minutes">Add minutes</string>
    <string name="call_history">Call history</string>
    <string name="remaining_minutes">Remaining discount minutes:</string>
    <string name="two_hundred">200</string>
    <string name="how_many_call_minutes">How many discounted call minutes have you purchased?</string>
    <string name="ok">OK</string>
    <string name="reset_warning">This will delete call history and remaining discounted call minutes.</string>
    <string name="clear_data">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_discount_call_minutes">Add discount call minutes</string>
    <string name="prefix_caption">Phone number prefixes qualified for discount:</string>
    <string name="prefix_sample">+91\n0011</string>
    <string name="call_time">Call Time</string>
    <string name="low_discount_call_balance">Low discount call balance</string>
    <string name="n_minutes_left">%1$s minute(s) remaining</string>
    <string name="call_this_contact">Call this contact</string>

</resources>